Bootprint3 theme: fix alignment of advanced search delete icon.

--- a/themes/bootprint3/less/bootprint.less
+++ b/themes/bootprint3/less/bootprint.less
@@ -189,3 +189,8 @@ ul.random.image li img { margin: 0 auto; }
 .jstree-facet .active > .jstree-anchor .facet {
   background-color: @active-orange;
 }
+
+/* --- Icon centering on advanced search --- */
+.adv-term-remove .icon--img {
+  vertical-align: middle;
+}
